NOJIRA: Fixed alignment issue

--- a/Switch/src/style.less
+++ b/Switch/src/style.less
@@ -22,14 +22,17 @@
         font-weight: bold;
         float: left;
     }
-    .on-off-text {
-        margin-top: 2px;
-        color: @bulgarianRose;
-        &.place-left {
-            float: left;
-        }
-        &.place-right {
-            float: right;
+    .switch-button {
+        float: left;
+        .on-off-text {
+            margin-top: 2px;
+            color: @bulgarianRose;
+            &.place-left {
+                float: left;
+            }
+            &.place-right {
+                float: right;
+            }
         }
     }
     .dnn-switch {
